# VapourSynth-ILS

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
source/: ils_impl.cu  ils_impl.hpp  vs_ils.cpp  win32.cpp
